$Id$
User-visible changes in version 0.9.5  (2010-  -  ):
* syntax: in "define ... where param=expr" expr is substituted in brackets now

User-visible changes in version 0.9.4  (2010-10-09):
* removed syntax `delete[range]', use `delete(condition)' instead
* syntax `y[x=15]' replaced with `y[index(15)]'
* removed data range syntax, e.g. X[3...10]=15. It can be replaced
  with X = n >= 3 and n < 10 ? 15 : x
* removed syntax "order="
* removed syntax "commands < file[m:n]", only the whole file can be executed
* modulo syntax changed from a%b to mod(a,b)
* syntax: '-' replaced with '_' in settings and 'info fit_history'
* syntax: 'fit history clear' replaced with 'fit clear_history'
* added Perl bindings (manual compilation: cd swig/ && make perl)
* GUI: remember recently subtracted baselines (GUI > Baseline Mode > Recent)
* bug fixes

User-visible changes in version 0.9.3  (2010-06-24):
* changed implementation of gamma and related functions (using boost.math now)
* syntax: so-called parametrized-functions spline[] and interpolate[]
  are replaced by so-called variadic functions Spline() and Polyline().
  The GUI in the Baseline Mode handles a separate baseline for each dataset now.
* abandoned syntax like 5<x<10, use 5<x and x<10
* syntax: '*' wildcard can be used when deleting functions and variables
* GUI: changed numeric format in a few place (eg. coordinates on the status bar)
* GUI: added Functions > Auto-Freeze option that automatically locks/unlocks
  parameters of a peak when a data range containing the center of this peak 
  is disactivated/activated
* GUI: added option GUI > Zoom All Shows Y=0
* required Boost version (only in the compilation time) is now >= 1.36

User-visible changes in version 0.9.2  (2010-05-07):
* To compile fityk, Boost (only headers) and xylib must be installed first.
  Fityk tarball does not contain a copy of boost and xylib now.
* user-defined functions: split functions can be defined in this way: