@@ -74,8 +74,8 @@ dele %pe
 F += Pearson7(~2000, ~75, ~0.6, ~2)
 fit 2 in @0
 fit+ 15
-with fitting_method=Nelder_Mead_simplex fit 10
-with fitting_method=Genetic_Algorithms fit 10
+with fitting_method=nelder_mead_simplex fit 10
+with fitting_method=genetic_algorithms fit 10
 %fun = copy(%_1)
 i+ %ble, %lo
 $a = %ble.shape
@@ -250,7 +250,7 @@ dump > tmp_dump.fit
 set can_cancel_guess # only shows info
 set can_cancel_guess = 1
 set cut_function_level = 0
-set fitting_method = Levenberg_Marquardt
+set fitting_method = levenberg_marquardt
 set formula_export_style = normal
 set guess_at_center_pm = 1
 set height_correction = 1
